# turbo-template

./: .gitignore  .prettierignore  .prettierrc.js  ADD_INTEGRATION_TEST_GUIDE.md  CLAUDE.md  ESLINT_9_MIGRATION_GUIDE.md  README.md  SEO_OPTIMIZATION_GUIDE.md  eslint.config.js  package.json  turbo.json
.github/workflows/: build.yaml  ci.yaml  deploy-main.yaml  promote-main.yaml  storybook.yaml  verify.yaml
apps/backend/: .flake8  .gitignore  README.md  package.json  pyproject.toml
apps/backend/__tests__/: test_main.py
apps/backend/app/: main.py
apps/backend/app/__tests__/: main_test.py
apps/backend/app/items/: router.py  types.py
apps/backend/app/scripts/: example_script.py
apps/backend/scripts/: example_script.py
apps/chrome/: .eslintrc.js  .gitignore  README.md  eslint.config.js  package.json  tsconfig.json  turbo.json  typings.d.ts
apps/chrome/.storybook/: chromeMock.ts  main.ts  preview.tsx  tsconfig.json
apps/chrome/src/: background.ts  content_script.tsx  options.tsx  side_panel.tsx
apps/chrome/webpack/: webpack.common.js  webpack.dev.js  webpack.prod.js
apps/docs/: eslint.config.js  mdx-components.ts  next.config.js  next.config.mjs  package.json  tsconfig.json
apps/docs/app/: layout.tsx  page.tsx
apps/docs/content/: about.mdx  built-in-components.mdx  index.mdx
apps/web/: .eslintrc.js  README.md  components.json  eslint.config.cjs  eslint.config.js  jest.config.cjs  jest.integration.config.cjs  jest.integration.setup.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json  vercel.json
apps/web/.storybook/: main.js  (+3 more)
(+64 files in other folders)
